# hidori

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/hidori_cli/apps/: base.py  hidori.py  pipeline.py
src/hidori_cli/commands/: __init__.py  base.py  hidori.py  pipeline.py  pipeline_run.py
src/hidori_cli/fields/: __init__.py  base.py  boolean.py  extra_data.py  filepath.py  text.py  version.py
src/hidori_common/: __init__.py  cli.py  dirs.py  typings.py
src/hidori_core/: __init__.py  pipeline.py
src/hidori_core/compat/: typing.py
src/hidori_core/modules/: __init__.py  apt.py  base.py  dnf.py  hello.py  hostname.py  wait.py
src/hidori_core/schema/: __init__.py  base.py  constraints.py  errors.py  fields.py  modifiers.py
src/hidori_core/utils/: __init__.py  messenger.py
src/hidori_pipelines/: __init__.py  group.py  pipeline.py
src/hidori_runner/drivers/: __init__.py  base.py  ssh.py  utils.py
src/hidori_runner/executors/: remote.py
src/hidori_runner/transports/: __init__.py  base.py  errors.py  ssh.py  utils.py
stubs/apt/: __init__.pyi  cache.pyi  package.pyi
stubs/apt/progress/: base.pyi  text.pyi
stubs/dbus/: __init__.pyi  proxies.pyi
stubs/dnf/: base.pyi  sack.pyi
stubs/dnf/db/: group.pyi
stubs/hawkey/: package.pyi  query.pyi
tests/: conftest.py
tests/test_common/: test_console_printer.py  test_message_writer.py
tests/test_core/test_schema/: test_definitions.py  test_fields.py  test_modifiers.py  test_schema.py
tests/test_runner/: conftest.py
tests/test_runner/test_drivers/: test_driver.py
tests/test_runner/test_executors/: test_remote.py
tests/test_runner/test_transports/: test_ssh.py  test_ssh_transport.py  test_transport.py
