[tool.poetry]
name = "hidori"
version = "0.3.0.dev0"
description = "A modern, agentless, zero-dependency system state assurance"
authors = ["Piotr Szpetkowski <piotr.szpetkowski@pyquest.space>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "hidori_common", from = "src" },
    { include = "hidori_core", from = "src" },
    { include = "hidori_runner", from = "src" },
    { include = "hidori_pipelines", from = "src" },
    { include = "hidori_cli", from = "src" },
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Installation/Setup",
]

repository = "https://github.com/hidori-dev/hidori"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/hidori-dev/hidori/issues"
"Changelog" = "https://github.com/hidori-dev/hidori/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.11"
typing-extensions = "^4.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
freezegun = "^1.2.2"
ipython = "^8.5.0"
mypy = "^0.982"
pre-commit = "^2.20.0"
pyfakefs = "^5.0.0"
pytest = "^7.1.3"

[tool.poetry.group.pypi.dependencies]
twine = "^4.0.1"

[tool.poetry.scripts]
hidori = "hidori_cli.apps.hidori:main"
hidori-pipeline = "hidori_cli.apps.pipeline:main"

[tool.mypy]
files = ["src"]
mypy_path = "stubs"
strict = true

[tool.pyright]
include = ["src"]
stubPath = "stubs"

# This is actually very likely to happen
reportMissingModuleSource = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
